fix scrollbar

--- a/style.css
+++ b/style.css
@@ -94,7 +94,7 @@ path, line {
   border-top: 1px solid #c7c7c7;
   padding: 20px;
   padding-left: 10px;
-  overflow: scroll;
+  overflow-y: scroll;
   margin-top: 4em;
 }
 
@@ -108,5 +108,7 @@ path, line {
   background: lightsteelblue; 
   border: 0px;        
   border-radius: 8px;         
-  pointer-events: none;   
+  pointer-events: none; 
+  top: 0;
+  left: 0;  
 }
